--- a/Watchlist.html
+++ b/Watchlist.html
@@ -41,7 +41,7 @@ canvas.spark{width:150px;height:40px;display:block;margin:auto}
 <button id="refreshBtn">רענון</button>
 <button id="exportBtn">יצוא</button>
 <label for="importFile" style="display:inline-flex;gap:6px;cursor:pointer">יבוא <input id="importFile" type="file" accept="application/json" style="display:none"></label>
-<input id="avKey" placeholder="AlphaVantage API Key (אופציונלי)" style="width:240px"/>
+<input id="avKey" placeholder=7FEJE7U6JF3CYL2X style="width:240px"/>
 <button id="proxyToggleBtn" title="עקיפת CORS">פרוקסי: אוטו</button>
 <button id="notifyBtn" class="primary">הפעל התרעות</button>
 </div>
@@ -259,4 +259,5 @@ updateProxyUI(); t=setInterval(()=>{quotes(); refreshDetails()},REFRESH);
 })();
 </script>
 </body></html>
+
 
