--- a/Watchlist.html
+++ b/Watchlist.html
@@ -62,7 +62,7 @@
   .fallbackCard{max-width:min(900px,96vw);background:var(--panel);border:1px solid var(--border);border-radius:12px;padding:0}
 </style>
 </head>
-<body><div style="background-color:#f8f9fa;padding:10px;text-align:center;font-weight:bold;border-bottom:1px solid #ccc;">API Usage: 1,234 requests used out of 10,000 daily quota</div>
+<body>
 <div class="app">
 <header class="panel" id="top">
 <div class="row">
@@ -116,7 +116,7 @@
 <th data-k="note">הערה</th>
 <th>גרף</th>
 <th>פעולות</th>
-</tr>
+<th>Pre-Market Price</th><th>After-Hours Price</th><th>Mini Chart</th><th>Analyst Target</th><th>ZACKS Rank</th></tr>
 </thead>
 <tbody id="tbody"></tbody>
 </table>
